k8s/04-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-typesense-gateway-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/typesense
