k8s/05-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: typesense-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: typesense-gateway-traefik-app
    k8s.kuboard.cn/workload: typesense-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-typesense-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd
spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/typesense
            backend:
              serviceName: typesense-svc
              servicePort: 8108
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.ohhash-production.npool.top
      http: *http_rules
